Fixed new recipe page by adding another wrapping div '.content'

--- a/app/assets/stylesheets/containers.css.scss
+++ b/app/assets/stylesheets/containers.css.scss
@@ -10,6 +10,12 @@
   padding-bottom: 60px;
 }
 
+.content {
+  max-width: 700px;
+  margin: 0 auto;
+  padding: 0;
+}
+
 //see below for .container
 
 .full-width {
